# openharn

./: .gitattributes  .gitignore  CITATION.cff  Cargo.toml  LICENSE  NOTICE  README.md  openharn.cmd  openharn.ps1  openharn.sh
configs/: LFM2-8B-A1B-UD-Q2_K_XL.conf  LFM2.5-8B-A1B-APEX-I-Compact.conf  README.md
docs/: CHEATSHEET.md  adapting-openharn-myeelin.md  adapting-openharn.md  adaptive-tool-calling.md  bitnet-on-cpu.md  dynamic-schemas.md  reasoning-tax.md  small-model-tool-calling.md
notes/: adaptive-tool-calling.md  ast-goal-results.md  bfcl-v4.md  bitnet-on-cpu.md  composition-wall-moved.md  dsgoal-final.md  dual-execution-modes.md  gbnf-grammar-fix.md  how-to-implement-openharn.md  lfm2-codeact-yesno.md  lfm2-yesno-codeact-results.md  model-configs-qwen-lfm2.md  myelin-implementation.md  paper-comparison.md  qwen-35-08b-llama-server.md  qwen35-08b-results.md  reasoning-tax.md  sample-tools.json  slm-harness-results.md  small-model-tool-calling.md
paper/: main.tex  references.bib
paper/figures/: decision-tree.tex  failure-taxonomy.tex  results-barchart.tex
src/: agent.rs  edit.rs  main.rs  myelin.rs  prompt.txt  prompt_mye.txt  serve.rs  tools.rs
src/slm_harness/: actions.rs  executor.rs  mod.rs  state.rs  verifier.rs
tests/: ast_benchmark.py  behavior.py  bench_bfcl_160.py  benchmark.py  run_bfcl_160.sh  tune_model.py  tune_model.sh
tests/bench_logs/: results.json  results.md  results_noreason.json  results_noreason.md  run.out  run_fallback.out  run_granite.out  run_noreason.out
tests/bfcl/: README.md  analyze.py  decompose_closeloop.py  (+10 more)
(+67 files in other folders)
